--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ button{
 
 @media(max-width: 480px) {
     .consulta{
-        padding-top: 55%;
+        padding-top: 1%;
     }
     .contenedor-formulario{
         display: flex;
@@ -180,14 +180,14 @@ button{
     }
     .formulario{
         width: 80%;
-        background-color: white;
+        background-color: transparent;
         padding: 0 2% 2% 2%;
         border-radius: 20px;
-        border: 1px solid black;
+        border: 1px inset rgb(220, 217, 217);
+        margin-bottom: 3.5vh;
     } 
     .descripcion{
         width: 80%;
-        padding: 20px;
         text-align: center;
         font-size:medium;
     }
@@ -196,7 +196,6 @@ button{
 /* CSS sección de información del proyecto */
 
 .que-es{
-    margin-top: 80px;
     text-align: center;
     font-weight: normal;
 }
@@ -204,8 +203,8 @@ button{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 15vh;
 }
+
 .info-texto{
     width: 30%;
     text-align: center;
@@ -228,6 +227,7 @@ button{
     max-width: 100%;
 }
 @media(max-width: 480px) {
+
     .informacion{
         display: flex;
         flex-wrap: wrap;
@@ -243,6 +243,9 @@ button{
     }
     .icono-grande{
         width: 80%;
+    }
+    .words{
+        margin: 0;
     }
 
 }
@@ -267,7 +270,11 @@ button{
     font-weight: bold;
     text-align: center;
 }
-
+@media(max-width: 480px) {
+    .titulo-etapas{
+        margin: 0 auto;
+    }
+}
 /*Bancos*/
 .titulo-bancos{
     text-align: center;
